# mock-assignment-2-oop

./: README.md  main.py  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: running.yml  style.yml
datasets/: __init__.py  baseclasses.py  dataset.py  exceptions.py  mixins.py  transform.py  utils.py
tests/: __init__.py  test_abc.py  test_exceptions.py  test_exceptions_pyfakefs.py  test_getitem.py  test_getitem_pyfakefs.py  test_loading.py  test_loading_pyfakefs.py  utils.py
