[project]
name = "assignment-2-group-33-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pyfakefs>=5.9.3",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
]
